Fixed layout issues on mobile

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,7 +1,8 @@
 nav {
   min-height: 10vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin: 0 24px;
   align-items: center;
   h1 {
     letter-spacing: 2px;
@@ -10,6 +11,7 @@ nav {
   button {
     background-color: transparent;
     border: 2px solid rgb(65, 65, 65);
+    color: black;
     padding: 0.5rem;
     transition: all 0.3s ease;
     cursor: pointer;
@@ -23,3 +25,12 @@ nav {
 .library-icon {
   padding-left: 4px;
 }
+
+@media screen and (min-width: 768px) {
+  nav {
+    justify-content: space-around;
+    margin: 0;
+  }
+}
+
+
