--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   img {
-    width: 15rem;
+    width: 44%;
     border-radius: 50%;
   }
   h2 {
@@ -16,6 +16,12 @@
   }
 }
 
-
+@media screen and (min-width: 768px) {
+  .song-container {
+    img {
+      width: 15rem;
+    }
+  }
+}
 
   
