--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,12 +25,18 @@ h4 {
 }
 
 .library-active {
-  margin-left: 25rem;
+  margin-left: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   .library-active {
     margin-left: 20rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .library-active {
+    margin-left: 25rem;
   }
 }
 
